src/objects/Partner_Quote_Approval_Justification__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitive_Pressures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Pressures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Satisfaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Sizing_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design/Sizing Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Previous_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Previous Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Wrong_Part_on_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing/Wrong Part on Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_Quote_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-Quote Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Customer_Acquisition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Customer Acquisition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Partner Quote Approval Justifications</relationshipLabel>
        <relationshipName>Partner_Quote_Approval_Justifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Timeline_for_Closing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timeline for Closing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X100_Deal_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>100% Deal Discount</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Quote Approval Justification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PQAJ-{0000000}</displayFormat>
        <label>Partner Quote Approval Justification Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Quote Approval Justifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>